infrastructure/manifests/iamsharedidp.yaml
#
# Copyright (c) 2021 Microsoft (Catena-X Consortium)
#
# See the AUTHORS file(s) distributed with this work for additional
# information regarding authorship.
#
# See the LICENSE file(s) distributed with this work for
# additional information regarding license terms.
#

# K8 Manifest to deploy the shared IAM service based on Keycloak

apiVersion: v1
kind: Service
metadata:
  name: iamsharedidp
  namespace: iam
  labels:
    app: iamsharedidp
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: iamsharedidp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iamsharedidp
  namespace: iam
  labels:
    app: iamsharedidp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iamsharedidp
  template:
    metadata:
      labels:
        app: iamsharedidp
    spec:
      containers:
      - name: iamsharedidp
        image: ${CONTAINER_REGISTRY}/keycloak:sharedidp
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: iamsharedidp/auth/realms/master
            port: 8080
