infrastructure/manifests/semantics.yaml
#
# Copyright (c) 2021 T-Systems International GmbH (Catena-X Consortium)
#
# See the AUTHORS file(s) distributed with this work for additional
# information regarding authorship.
#
# See the LICENSE file(s) distributed with this work for
# additional information regarding license terms.
#

# K8 server deployment, service and ingress 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantics
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantics
  template:
    metadata:
      labels:
        app: semantics
    spec:
      containers:
      - name: semantics
        image: $CONTAINER_REGISTRY/semantics/services${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: semantics
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4242
  selector:
    app: semantics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semantics-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: services-certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /semantics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: semantics
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapter
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adapter
  template:
    metadata:
      labels:
        app: adapter
    spec:
      containers:
      - name: adapter
        image: $CONTAINER_REGISTRY/semantics/adapter${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: adapter
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4242
  selector:
    app: adapter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adapter-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: adapter-certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /adapter(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: adapter
            port:
              number: 8080
# GRAPHDB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphdb
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphdb
  template:
    metadata:
      labels:
        app: graphdb
    spec:
      containers:
      - name: graphdb
        image: $CONTAINER_REGISTRY/semantics/jena-fuseki:4.1.0
        imagePullPolicy: $IMAGE_PULL_POLICY
        args: ["--tdb2", "--update", "--loc", "databases/", "/ds"]
        resources:
          limits:
            memory: "1024Gi"
          requests:
            memory: "512Mi"
        volumeMounts:
        - name: graphdbdata
          mountPath: /fuseki/databases
        - name: graphdblog
          mountPath: /fuseki/logs
      volumes:
      - name: graphdbdata
        azureFile:
           secretName: graphdb-share-secret
           shareName: ${GRAPHDB_SHARE_NAME}/data
           readOnly: false
      - name: graphdblog
        azureFile:
           secretName: graphdb-share-secret
           shareName: ${GRAPHDB_SHARE_NAME}/log
           readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: graphdb
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 3030
    targetPort: 3030
  selector:
    app: graphdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anonymizer
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anonymizer
  template:
    metadata:
      labels:
        app: anonymizer
    spec:
      containers:
        - name: anonymizer
          image: $CONTAINER_REGISTRY/semantics/anonymizer${WORKSPACE}:$VERSION
          imagePullPolicy: $IMAGE_PULL_POLICY
          ports:
---
apiVersion: v1
kind: Service
metadata:
  name: anonymizer
  namespace: semantics
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: anonymizer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anonymizer-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: service
  tls:
    - hosts:
        - ${CATENA_SERVICE_URL}
      secretName: anonymizer-certificate-secret
  rules:
    - host: ${CATENA_SERVICE_URL}
      http:
        paths:
          - path: /anonymizer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: anonymizer
                port:
                  number: 8080
